--- a/ST10256859_PROG7311_POE/Views/Employee/FarmerProducts.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Employee/FarmerProducts.cshtml
@@ -80,7 +80,7 @@
                                     <td>@product.ProductName</td>
                                     <td>@product.Category</td>
                                     <td>@product.ProductionDate.ToShortDateString()</td>
-                                    <td>@product.ProductPrice</td>
+                                    <td>R @product.ProductPrice</td>
                                     <td>@product.AvailableQuantity</td>
                                     <td>@product.Description</td>
                                 </tr>
