--- a/ST10256859_PROG7311_POE/Views/Shared/_Layout.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Shared/_Layout.cshtml
@@ -49,13 +49,13 @@
                             else if (userRole == "Employee")
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="EmployeeProfile">Employee Profile</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="FarmerProducts">Farmer Products</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="FarmerAdd">Add Farmer</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="EmployeeProfile">Profile</a>
                                 </li>
                             }
                         </ul>
