--- a/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
@@ -4,66 +4,64 @@
     ViewData["Title"] = "Add Product";
 }
 
-<h2>Add Product</h2>
+<div class="home-logo-container">
+    <div class="home-title-group farmer-products-title-group">
+        <div class="profile-details farmer-products-details">
+            <div class="home-welcome-message login-title profile-title-center">
+                Add Product
+            </div>
+            <form asp-action="ProductAdd" method="post" enctype="multipart/form-data" class="auth-form">
+                @Html.HiddenFor(m => m.FarmerID)
 
-<form asp-action="ProductAdd" method="post" enctype="multipart/form-data" class="container mt-4">
-    @Html.HiddenFor(m => m.FarmerID)
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="ProductName"></label>
+                        <input asp-for="ProductName" class="form-control" />
+                        <span asp-validation-for="ProductName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="Category"></label>
+                        <input asp-for="Category" class="form-control" />
+                        <span asp-validation-for="Category" class="text-danger"></span>
+                    </div>
+                </div>
 
-    <div class="row mb-3">
-        <label asp-for="ProductName" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="ProductName" class="form-control" />
-            <span asp-validation-for="ProductName" class="text-danger"></span>
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="ProductionDate"></label>
+                        <input asp-for="ProductionDate" type="date" class="form-control" />
+                        <span asp-validation-for="ProductionDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="ProductPrice"></label>
+                        <input asp-for="ProductPrice" class="form-control" />
+                        <span asp-validation-for="ProductPrice" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="AvailableQuantity"></label>
+                        <input asp-for="AvailableQuantity" class="form-control" />
+                        <span asp-validation-for="AvailableQuantity" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="ProductImage"></label>
+                        <input asp-for="ProductImage" type="file" class="form-control" />
+                        <span asp-validation-for="ProductImage" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="Description"></label>
+                        <textarea asp-for="Description" class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn home-btn-signup">Add Product</button>
+            </form>
         </div>
     </div>
-
-    <div class="row mb-3">
-        <label asp-for="Category" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Category" class="form-control" />
-            <span asp-validation-for="Category" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label asp-for="ProductionDate" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="ProductionDate" type="date" class="form-control" />
-            <span asp-validation-for="ProductionDate" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label asp-for="ProductPrice" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="ProductPrice" class="form-control" />
-            <span asp-validation-for="ProductPrice" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label asp-for="AvailableQuantity" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="AvailableQuantity" class="form-control" />
-            <span asp-validation-for="AvailableQuantity" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label asp-for="Description" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <textarea asp-for="Description" class="form-control"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label asp-for="ProductImage" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="ProductImage" type="file" class="form-control" />
-            <span asp-validation-for="ProductImage" class="text-danger"></span>
-        </div>
-    </div>
-
-    <button type="submit" class="btn btn-success">Add Product</button>
-</form>
+</div>
