--- a/ST10256859_PROG7311_POE/Views/Home/Login.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Home/Login.cshtml
@@ -22,7 +22,7 @@
             </div>
             <button type="submit" class="btn home-btn-login">Login</button>
         </form>
-        <div class="mt-3">
+        <div class="mt-3 signup-login-center signup-login-margin">
             <p>Don't have an account? <a href="@Url.Action("SignUp", "Home")" class="home-link">Sign up</a></p>
         </div>
     </div>
