--- a/ST10256859_PROG7311_POE/Views/Home/SignUp.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Home/SignUp.cshtml
@@ -4,51 +4,61 @@
 <div class="home-logo-container">
     <img src="~/images/image1.png" alt="Agri-Energy Connect Logo" class="home-logo-img" />
 
-    <div class="home-title-group">
-        <div class="home-welcome-message login-title">
-            Create your account
-        </div>
-        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-        <form asp-action="SignUp" method="post" class="auth-form">
-            <div class="form-group">
-                <label asp-for="FirstName"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+    <div class="home-title-group farmer-products-title-group signup-box-margin">
+        <div class="profile-details farmer-products-details">
+            <div class="home-welcome-message login-title profile-title-center signup-title-margin">
+                Create your account
             </div>
-            <div class="form-group">
-                <label asp-for="LastName"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+            <form asp-action="SignUp" method="post" class="auth-form">
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="FirstName"></label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="LastName"></label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="Email"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="PhoneNumber"></label>
+                        <input asp-for="PhoneNumber" class="form-control" />
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="Address"></label>
+                        <input asp-for="Address" class="form-control" />
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group flex-grow-1">
+                        <label asp-for="ConfirmPassword"></label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <button type="submit" class="btn home-btn-signup">Sign Up</button>
+            </form>
+            <div class="mt-3 signup-login-center">
+                <p>Already have an account? <a href="@Url.Action("Login", "Home")" class="home-link">Login</a></p>
             </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn home-btn-signup">Sign Up</button>
-        </form>
-        <div class="mt-3">
-            <p>Already have an account? <a href="@Url.Action("Login", "Home")" class="home-link">Login</a></p>
         </div>
     </div>
 </div>
