--- a/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
@@ -10,22 +10,24 @@
             <div class="home-welcome-message login-title profile-title-center">
                 Add Product
             </div>
+            @if (ViewContext.HttpContext.Request.Method == "POST" && !ViewData.ModelState.IsValid)
+            {
+                @Html.ValidationSummary(false, "", new { @class = "system-error-summary" })
+            }
             <form asp-action="ProductAdd" method="post" enctype="multipart/form-data" class="auth-form">
                 @Html.HiddenFor(m => m.FarmerID)
-
                 <div class="form-row">
                     <div class="form-group flex-grow-1">
                         <label asp-for="ProductName"></label>
-                        <input asp-for="ProductName" class="form-control" />
+                        <textarea asp-for="ProductName" class="form-control" rows="2"></textarea>
                         <span asp-validation-for="ProductName" class="text-danger"></span>
                     </div>
                     <div class="form-group flex-grow-1">
                         <label asp-for="Category"></label>
-                        <input asp-for="Category" class="form-control" />
+                        <textarea asp-for="Category" class="form-control" rows="2"></textarea>
                         <span asp-validation-for="Category" class="text-danger"></span>
                     </div>
                 </div>
-
                 <div class="form-row">
                     <div class="form-group flex-grow-1">
                         <label asp-for="ProductionDate"></label>
