--- a/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Farmer/ProductAdd.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewData["Title"] = "Add Product";
+    var today = DateTime.Today.ToString("yyyy-MM-dd");
+    var dateValue = Model.ProductionDate != default(DateTime)
+        ? Model.ProductionDate.ToString("yyyy-MM-dd")
+        : today;
 }
 
 <div class="home-logo-container">
@@ -31,7 +35,12 @@
                 <div class="form-row">
                     <div class="form-group flex-grow-1">
                         <label asp-for="ProductionDate"></label>
-                        <input asp-for="ProductionDate" type="date" class="form-control" />
+                        <input asp-for="ProductionDate"
+                               type="date"
+                               class="form-control"
+                               value="@dateValue"
+                               min="1900-01-01"
+                               max="2100-12-31" />
                         <span asp-validation-for="ProductionDate" class="text-danger"></span>
                     </div>
                     <div class="form-group flex-grow-1">
@@ -57,7 +66,7 @@
                 <div class="form-row">
                     <div class="form-group flex-grow-1">
                         <label asp-for="Description"></label>
-                        <textarea asp-for="Description" class="form-control"></textarea>
+                        <textarea asp-for="Description" class="form-control" maxlength="250"></textarea>
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                 </div>
